--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -137,3 +137,11 @@ jobs:
       with:
         args: release --timeout 120m --snapshot --skip publish --config ./.goreleaser/${{ matrix.variant }}.yaml
 
+    - name: Scan docker images for vulnerabilities
+      if: ${{ (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch') && (matrix.variant == 'connect' || matrix.variant == 'connect-ai' || matrix.variant == 'connect-cloud') }}
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: ${{ fromJSON('{"connect":"redpandadata/connect:edge","connect-ai":"redpandadata/connect:edge-ai","connect-cloud":"redpandadata/connect:edge-cloud"}')[matrix.variant] }}
+        format: json
+        ignore-unfixed: true
+        exit-code: 1
